Update ML Pipeline Preparation.ipynb

--- a/disaster-project/ML Pipeline Preparation.ipynb
+++ b/disaster-project/ML Pipeline Preparation.ipynb
@@ -196,6 +196,7 @@
     "    # build dataframe\n",
     "    performances = pd.DataFrame(performances, columns=['f1 score', 'precision', 'recall'],\n",
     "                                index = Y.columns)   \n",
+    "    performances.head()\n"
     "    return performances\n"
    ]
   },
